# label-libraries

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
decoders/: engine.js
deployment/scripts/: fetch_barcode_conf.sh
label-gui/: LabelMaker.py  adjustDarkness.zpl  align.zpl  label.zpl  make_label.py  make_label_gui.py  make_net_trig_labels.py  make_wagon_labels.py  realign.zpl  requirements.txt  setLabelLength_Flex.zpl  setLabelLength_Module.zpl  setLabelLength_Nominal.zpl  setLabelLength_Tile.zpl  stash_printed.py  to_print.txt
label-gui/sql/: labeling_schema.sql
label-gui/static/: MajorTypes.py  export.py  printed_barcodes.json  printed_barcodes.json.backup
label-gui/tmp/: tmp.zpl  tmp_zpl.txt
label-gui/utils/: DBUpload.py  HGCAL_Labeling_Request_Form.csv  connect.py  downloadHGCALform.py  requirements.txt
label-website/: README.md  pyproject.toml
label-website/decoders/: engine.js
label-website/labelinfo/: __main__.py
label-website/labelinfo/static/js/: global.js  home.js
label-website/labelinfo/templates/: home.html
labelinfo/: __init__.py  __main__.py  main_bp.py
labelinfo/static/css/: style.css
labelinfo/static/js/: barcode_decode.js  home.js
labelinfo/templates/: about.html  base.html  home.html
